integ-tests/tests/snapshots/parser__bad_table_names__multi_empty.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[multiline-string-key]: 
  ┌─ multi_empty:1:2
  │
1 │ ['''''']
  │  ^^^ multiline keys are not allowed
