integ-tests/tests/snapshots/parser__bad_table_names__trailing_period.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[wanted]: 
  ┌─ trailing_period:1:4
  │
1 │ [a.]
  │    ^ expected a table key
